# django_railway

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
main/templates/main/: index.html
myproject/: settings.py
