[tool.poetry]
name = "django-railway"
version = "0.1.0"
description = "A simple Django app for Railway using Poetry"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.2.3"
gunicorn = "23.0.0"
python-dotenv = "1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
